# youdaonote-pull

./: .gitignore  main.py  pyproject.toml  run  run.bat
src/youdaonote_pull/: __init__.py  api.py  cli.py  convert.py  log.py
template/: config.toml
test/: test.py  test_convert.py
tests/test_convert/: test_convert.py
youdaonote_pull/: __init__.py  __main__.py  api.py  config.py  core.py  covert.py  image.py
youdaonote_pull/core/: log.py
