[project]
name = "youdaonote-pull"
version = "0.1.0"
description = "导出有道云笔记到本地"
readme = "README.md"
authors = [
    { name = "deppwang", email = "deppwxq@gmail.com" },
    { name = "Jason Swift", email = "anemele@outlook.com" },
]
requires-python = ">=3.10"
dependencies = [
    "markdownify>=0.14.1",
    "mashumaro[toml]>=3.15",
    "requests>=2.32.3",
    "rtoml>=0.12.0",
    "win32-setctime>=1.2.0",
]

[project.scripts]
youdaonote-pull = "youdaonote_pull.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pytest>=8.3.4",
]
